<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Momentum Maze</string>
    <string name="action_settings">Settings</string>
    <string name="levelOneLabel">Level One</string>
    <string name="levelTwoLabel">Level Two</string>
    <string name="levelThreeLabel">Level Three</string>
    <string name="levelFourLabel">Level Four</string>
    <string name="levelFiveLabel">Level Five</string>
    <string name="levelSixLabel">Level Six</string>
    <string name="selectLevelLabel">Select a Level</string>
    <string name="instructionLabel">Instructions</string>
    <string name="resetButtonLabel">Reset Maze</string>

</resources>
