<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mikennaeverett.momentummaze.app.MazeActivity">
        <Button
            android:id="@+id/levelOneButton"
            android:text="@string/levelOneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/levelTwoButton"
            android:text="@string/levelTwoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/levelThreeButton"
            android:text="@string/levelThreeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/levelFourButton"
            android:text="@string/levelFourLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/levelFiveButton"
            android:text="@string/levelFiveLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/levelSixButton"
            android:text="@string/levelSixLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>